[FIX] - Configurator - Line to be visible all the time

--- a/css/style.css
+++ b/css/style.css
@@ -2725,7 +2725,7 @@ h6 {
   border-left: 1px solid #C6C6C6;
 }
 
-.popup-premium .show-standard .col:nth-child(2) {
+.popup-premium .col:nth-child(2) {
   border-right: 1px solid #C6C6C6;
 }
 
